# rust_simple_ws_server

./: .env.example  .gitignore  Cargo.toml  dev.dockerfile  docker-compose.yml
src/: main.rs
src/controller/: chat_controller.rs  mod.rs  room_controller.rs
src/database/: mod.rs  redis.rs
src/middleware/: authorization.rs  mod.rs
src/repository/: message.rs  mod.rs  room.rs
src/route/: chat_ws.rs  health.rs  mod.rs  room.rs
