[package]
name = "websocket_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
warp = { version = "0.3.7", features = ["tls"] }
tokio-macros = "2.2.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
redis = "0.25.4"
